--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,5 @@
 name: CI
-on: [push]
+on: pull_request
 jobs:
   standard-checks:
     name: Lint and Test
@@ -16,5 +16,3 @@ jobs:
         run: npm run ci:lint
       - name: Run Tests
         run: npm run ci:test
-      - name: Bundle and Output
-        run: npm run build
