--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Test and Build
 on: pull_request
 jobs:
   static:
@@ -6,7 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          npm ci
           npx vercel pull --yes --token=${VERCEL_TOKEN}
         env:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
