--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode=production",
     "lint": "eslint . --fix",
     "ci:lint": "eslint .",
-    "test": "jest --watch",
+    "test": "jest",
     "ci:test": "jest --ci"
   },
   "keywords": [],
