--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,4 +12,4 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       - run: |
-          npx vercel test
+          npx vercel build
