--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,10 +13,9 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       - run: |
           npx vercel build
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
       # - uses: amondnet/vercel-action@v20
       #   with:
       #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
       #     vercel-org-id: ${{ secrets.ORG_ID}}
       #     vercel-project-id: ${{ secrets.PROJECT_ID}}
-       name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
