--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -2,10 +2,11 @@ name: GitHub Actions Vercel Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-on:
+on: pull-request
   push:
     branches-ignore:
       - dev
+      - main
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
