--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,9 +3,9 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
-  push:
-    branches-ignore:
-      - dev
+  pull-request:
+    branches:
+      - main
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
