--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,9 @@
-name: GitHub Actions Vercel Preview Deployment
+name: Vercel Test, Build and Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
-  pull-request:
+  pull_request:
     branches:
       - main
 jobs:
